# LimitOrderBook

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  to_do.md
backend/cpp/: Makefile  main  main.cpp  transaction_logs.txt
backend/cpp/include/: adding_to_tree.h  auto_balancing_tree.h  dataStructures.h  functions.h  init_and_free.h  matching_orders.h  remove_order_from_tree.h
backend/cpp/src/: adding_to_tree.cpp  auto_balancing_tree.cpp  functions.cpp  init_and_free.cpp  matching_orders.cpp  remove_order_from_tree.cpp  writing_orders_to_file.cpp
cpp/: CMakeLists.txt  Makefile  main.cpp  transaction_logs.txt
cpp/include/: B_tree.h  dataStructures.h
cpp/init_and_free/include/: init_and_free.h
cpp/init_and_free/src/: init_and_free.cpp
cpp/logging/include/: writing_orders_to_file.h
cpp/orders_logic/include/: add_order.h  matching_orders.h
cpp/orders_logic/src/: add_order.cpp  matching_orders.cpp
cpp/src/: B_tree.cpp
cpp/tests/: test.cpp
cpp/tree_logic/include/: add_node.h  adding_to_tree.h  auto_balancing_tree.h  remove_order_from_tree.h
cpp/tree_logic/src/: add_node.cpp  adding_to_tree.cpp  auto_balancing_tree.cpp  remove_order_from_tree.cpp
